Replace avatar and thumbnail URLs attributes and methods to List<Image> in Infos